Fix movement of text on the home page and gap either side over image. Comment out code causing problem for reference to styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ nav a {
 
     /*specific height*/
     min-height: 800px;
-    min-width: 100%;
+    width: 100%;
 
     /* parallax scrolling effect */
     background-attachment: fixed;
@@ -153,15 +153,22 @@ nav a {
 
 /* HOME PAGE Content */
 
+/*
 #quote-home {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.7);
     text-align: center;
-    position: absolute;
-    bottom: 60%;
-    top: 40%;
+    /*position: absolute;*/
+    /*margin-top: 350px;
     width: 100%;
     min-height: 150px;
-    padding: 50px 0;
+    /*padding: 50px 0;
+}*/
+
+#quote-home {
+    text-align: center;
+    padding: 20px 0;
+    margin-top: 120px;
+    background-color: rgba(255, 255, 255, 0.7);
 }
 
 #quote-home > h4 {
@@ -172,7 +179,7 @@ nav a {
     font-size: 110%;
     /*line-height: 15px;*/
     text-wrap: wrap;
-    padding: 0 50px;
+   /* padding: 0 50px;*/
 }
 
 #benefits-text, #roots-text, #journey-text {
@@ -236,18 +243,21 @@ nav a {
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
-    padding: 20px 0;
+    /*padding: 20px 0;*/
 }
 
 .techniques {
     width: 100%;
-    padding: 20px 20px;
+    /*padding: 20px 20px;*/
 }
 
 .techniques h4 {
     font-size: 150%;
     text-align: center;
+    border-bottom: 1px solid #401c04;
+    padding-bottom: 5px;
 }
+
 .techniques h5, .techniques h6 {
     font-size: 120%;
 }
@@ -255,13 +265,13 @@ nav a {
 #text-box {
     width: 40%;
     text-wrap: wrap;
-    border: 2px solid #401c04;
-    border-radius: 25px 25px;
+   /* border: 2px solid #401c04;
+    border-radius: 25px 25px;*/
 }
 
 #techniques-option {
    text-align: center;
-   padding: 10px 0;
+   /*padding: 5px 0;*/
 }
 
 #techniques-image {
